# family-finance-manager

./: .gitignore  CHANGELOG.md  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
app/models/: __init__.py  budget.py  category.py  transaction.py  user..py  user.py
templates/: user.html
tests/models/: test_userr.py
